# Smarthome-Python

./: .gitignore  main.py  pyproject.toml
smarthome/: __main__.py  bewaesserung.py  clock.py  config.example.py  console.py  door.py  ebike.py  energy.py  file.py  garagedoor.py  influx.py  light.py  mqtt.py  oil.py  postgres.py  shutters.py  smarthome_async.py  solar.py  sun.py  telegram_bot.py  ups.py  weather.py  web.py
static/: index.html
